Added additional logic/checks

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
 ﻿[*.cs]
 dotnet_diagnostic.IDE0160.severity = none
 
+# IDE0270: Use coalesce expression
+dotnet_diagnostic.IDE0270.severity = none
+
 ﻿[*Tests.cs]
 dotnet_diagnostic.CA1707.severity = none
