--- a/.editorconfig
+++ b/.editorconfig
@@ -6,12 +6,12 @@ dotnet_diagnostic.IDE0270.severity = none
 
 dotnet_diagnostic.IDE0046.severity = none
 
-[*HabitTrackerDbContext.cs]
-# CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider adding the 'required' modifier or declaring as nullable.
-dotnet_diagnostic.CS8618.severity = none
-
-﻿[*Tests.cs]
+﻿[*HabitTests.cs]
 dotnet_diagnostic.CA1707.severity = none
 
 # IDE0305: Simplify collection initialization
 dotnet_diagnostic.IDE0305.severity = none
+
+[*HabitTrackerDbContext.cs]
+# CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider adding the 'required' modifier or declaring as nullable.
+dotnet_diagnostic.CS8618.severity = none
