--- a/HabitTracker.Console/HabitTracker.Console.csproj
+++ b/HabitTracker.Console/HabitTracker.Console.csproj
@@ -1,4 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <StartupObject>HabitTracker.ConsoleApp.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\HabitTracker.Core\HabitTracker.Core.csproj" />
   </ItemGroup>
